 ExerciseViewer changes:
 - GarminFitParser: bugfix for handling of missing sample data,
   e.g. temperature, heartrate, speed
   (GitHub issue #168, occurred with Edge 800 files)
 - Diagram Panel improvements:
   - use of transparent area charts instead of line charts
   - added crosshair lines when clicking a position in the chart
   - use of suited graph colors
   => much better readability and comparability

v7.4.1:
 SportsTracker changes:
 - Calendar View:
   - Issue #141: today is highlighted in a blue circle (red  for sundays)
   - removed layout workarounds (JavaFX bugs have been fixed)
 - STApplication: removed Swing Look&Feel workaround (no Swing map anymore)
 - Refactoring: removed resource lookup in entity classes
 - updated Java runtime to Java SE/FX 8u144, contains a bugfix for a memory
   leak in the WebView used by LeafletMap
 ExerciseViewer changes:
 - ported all exercise parsers and the unit tests written in Groovy to Kotlin
   - less dependencies, Groovy is not needed anymore (was big)
   - parser implementations are now faster and more stable (Kotlin is typesafe)
   - refactoring of PolarHrmParser and some other parsers implemented in Groovy
     (huge monolithic code blocks)
   - Kotlin can now be used in all modules together with Java
     (no more mixed compilation issues with Groovy code)
 - ported all data, core and UI classes from Java to Kotlin
   - less and simpler code, better maintainable
   - null safety in data model and view classes => no exceptions anymore when
     specific values are missing / null
 - Diagram Panel: missing values are not longer displayed as 0 values
   -> improves readability of diagrams
 - removed compiler warnings in LeafletMap component
 - Issue #159: added support for Garmin Edge 820 exercise files
   - updated Garmin FIT SDK library to version 20.33.01, previous FIT library
     was not able to parse exercise files with the new protocol format 2.0
   - added unit test for a Garmin Edge 820 exercise file